src/objects/VIDSigner_AttachFile__e.object
<CustomObject>
    <fields>
        <fullName>Contrato__c</fullName>
        <label>Contrato</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Doc_Externo__c</fullName>
        <label>Id Doc Externo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mensaje__c</fullName>
        <label>Mensaje</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NombreArchivo__c</fullName>
        <label>NombreArchivo</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>VIDSigner_AttachFile</label>
    <pluralLabel>VIDSigner_AttachFiles</pluralLabel>
</CustomObject>